--- a/q5.md
+++ b/q5.md
@@ -1,1 +1,29 @@
+Approach 1:
+
+def doubleL(n): //takes n as input
+    res = [] //creating empty list
+    for i in range(n): res.append(i * 2) //iterates through every number in n-1 and appends the doubled numbers to res. 
+    return res //returns res
+
+for i in doubleL(5): 
+    print(i, end=' : ') //The for loop iterates over doubleL(5) and prints each element.
+
+
+Approach 2:
+for x in [n * 2 for n in range(5)]: //creates a list comprehension. It creates a list containing the values doubled from 0 to 4
+    print(x, end=' : ') //the for loop iterates through everything to print the results. 
+
+#Approach 3
+def doubleG(n):
+        for i in range(n):
+            yield i * 2
+
+for i in doubleG(5):
+        print(i, end=' : ')
+        
+DoubleG(n) is a generator function. The reason why you'd use it is because it generates numbers on-the-fly, which saves memory compared to storing all values in a list.
+
+    
+
+
 
